--- a/debugging-queries.mdx
+++ b/debugging-queries.mdx
@@ -163,7 +163,7 @@ in your terminal or by stepping through with a debugger.
 
 If you're not able to use the query plan visualizer or resolver replay, you can also use the logs to debug your query.
 Use the `chalk_logger` from the `chalk.clogging` just like a standard python logger. This logger will output
-to the web interface, and to configured log sinks (i.e. your DataDog instance).
+to the web interface, and to configured log sinks (for example, a DataDog instance).
 
 ```python
 from chalk.clogging import chalk_logger
