--- a/self-join.mdx
+++ b/self-join.mdx
@@ -7,7 +7,9 @@ import { TipInfo } from '@/components/Tip'
 
 ---
 
-Self joins in Chalk are done via intermediary feature sets.
+A self join, involves linking a feature set instance to other feature set instances of the same type. For example, you might want to join a `Book` feature set to its prequel.
+
+Self joins in Chalk are implemented via intermediary feature sets.
 
 ## Recommended Implementation
 
