--- a/getting-started.mdx
+++ b/getting-started.mdx
@@ -264,7 +264,7 @@ your datasource.
 from chalk.sql import PostgreSQLSource
 user_pg = PostgreSQLSource(name="User_PG")
 ```
-3. You can use a [SQL File Resolver](https://docs.chalk.ai/docs/sql#sql-file-resolvers)
+3. You can use a [SQL File Resolver](/docs/sql#sql-file-resolvers)
 to pull this information. Create a new file called
 `users.chalk.sql` and copy the below contents:
 ```sql users.chalk.sql
