--- a/has-one.mdx
+++ b/has-one.mdx
@@ -92,4 +92,4 @@ To define optional relationships, use the `typing.Optional[...]` keyword:
 <PyDiffEditor html={hasOneOptionalDiff} />
 
 Note, resolvers that take optional features as inputs need to handle the `None` case. This is
-covered in more detail in [the resolver's section of the docs](https://docs.chalk.ai/docs/resolver-inputs#optional-has-one).
+covered in more detail in [the resolver's section of the docs](/docs/resolver-inputs#optional-has-one).
