--- a/resolver-tags.mdx
+++ b/resolver-tags.mdx
@@ -33,7 +33,7 @@ Resolvers take one or many tags, all of which need to match for the
 resolver to run. For example, you may want to test with
 a sandboxed vendor, and also be able to set a constant value
 for a particular feature. For instructions on how to set tags on SQL file resolvers,
-see the SQL file resolvers [docs](https://docs.chalk.ai/docs/sql#proper-comment-formatting)
+see the SQL file resolvers [docs](/docs/sql#proper-comment-formatting)
 
 ```py
 @online(tags=["**api:mock**", "**fraud**"])
