--- a/changelog.mdx
+++ b/changelog.mdx
@@ -10,13 +10,26 @@ hideToc: True
 
 ### Deployment Tags
 
-You can now add tags to your deployments. Tags are unique on your environments. If you add an already existing tag
-to a new deployment, Chalk will remove the tag from the old deployment.
+You can now add tags to your deployments. Tags are unique on your environments. If you add an already existing tag to a new deployment, Chalk will remove the tag from the old deployment.
 
-Tags can be with the `--deployment-tag` flag n the chalk CLI.
+Tags can be added with the `--deployment-tag` flag in the chalk CLI.
 
 ```sh
 chalk apply --deployment-tag=latest --deployment-tag=v1.0.4
+```
+
+You also can specify a required pattern for your tags by adding a `tagregex` field to your `chalk.yaml` file. Any deployment tags will need to match your supplied regex. For instance:
+
+```chalk.yaml
+project: my-project-id
+tagregex: latest|v[0-9]+\.[0-9]+\.[0-9=+]
+environments:
+  default:
+    runtime: python311
+    requirements: ./requirements.txt
+    dockerfile: Dockerfile
+  prod:
+    requirements: ./requirements-prod.txt
 ```
 
 ## Mar 19, 2024
